kube/laundree.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: laundree-${BRANCH}
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: laundree-${BRANCH}
    spec:
      containers:
      - name: nginx
        image: nginx
        resources:
          requests:
            cpu: 0.02
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
        ports:
          - containerPort: 3000
        volumeMounts:
          - mountPath: /etc/nginx/
            name: nginx-config
            readOnly: true
      volumes:
      - name: nginx-config
        configMap:
          name: laundree-${BRANCH}
          items:
            - key: nginx.conf
              path: nginx.conf

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web-${BRANCH}
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: web-${BRANCH}
    spec:
      containers:
      - name: web
        image: laundree/laundree:${TAG}
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
        command:
          - "bash"
          - "-c"
          - ". /home/laundree/.nvm/nvm.sh && npm run start:web"
        resources:
          requests:
            cpu: 0.01
        ports:
          - containerPort: 3000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-${BRANCH}
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: api-${BRANCH}
    spec:
      containers:
      - name: api
        image: laundree/laundree:${TAG}
        command:
          - "bash"
          - "-c"
          - ". /home/laundree/.nvm/nvm.sh && npm run start:api"
        readinessProbe:
          httpGet:
            path: /users
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          requests:
            cpu: 0.02
        ports:
          - containerPort: 3000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: socket-${BRANCH}
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: socket-${BRANCH}
    spec:
      containers:
      # [START web]
      - name: socket
        command:
          - "bash"
          - "-c"
          - ". /home/laundree/.nvm/nvm.sh && npm run start:socket"
        image: laundree/laundree:${TAG}
        resources:
          requests:
            cpu: 0.02
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
        ports:
          - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: laundree-${BRANCH}
  labels:
    app: laundree-${BRANCH}
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: laundree-${BRANCH}
---

apiVersion: v1
kind: Service
metadata:
  name: web-${BRANCH}
  labels:
    app: web-${BRANCH}
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: web-${BRANCH}
---

apiVersion: v1
kind: Service
metadata:
  name: api-${BRANCH}
  labels:
    app: api-${BRANCH}
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: api-${BRANCH}
---

apiVersion: v1
kind: Service
metadata:
  name: socket-${BRANCH}
  labels:
    app: socket-${BRANCH}
spec:
  type: NodePort
  sessionAffinity: ClientIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: socket-${BRANCH}
