kube/mongo.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  ports:
    - port: 27017
  selector:
    app: mongo
  clusterIP: None
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mongo
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - image: mongo:3.4
        name: mysql
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-persistent-storage
          mountPath: /data/db
      volumes:
      - name: mongo-persistent-storage
        gcePersistentDisk:
          pdName: mongo-disk
          fsType: ext4
