kube/redirect.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redirect
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redirect
    spec:
      containers:
      # [START web]
      - name: redirect
        image: nginx:1.13
        command: ["/bin/sh"]
        args: ["-c", "echo $NGINX_CONFIG | base64 -d > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"]
        ports:
          - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: redirect
  labels:
    app: redirect
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: redirect
