kube/laundree-ingress-beta.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: beta
  name: beta-laundree-io
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - beta.laundree.io
    secretName: beta-laundree-io-tls
  rules:
  - host: beta.laundree.io
    http:
      paths:
        - backend:
            serviceName: laundree
            servicePort: 3000

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: beta
  name: api-beta-laundree-io
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - api.beta.laundree.io
    secretName: api-beta-laundree-io-tls
  rules:
  - host: api.beta.laundree.io
    http:
      paths:
        - backend:
            serviceName: api
            servicePort: 3000

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: beta
  name: socket-beta-laundree-io
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - socket.beta.laundree.io
    secretName: socket-beta-laundree-io-tls
  rules:
  - host: socket.beta.laundree.io
    http:
      paths:
        - backend:
            serviceName: socket
            servicePort: 3000
