kube/laundree-ingress-master.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: master
  name: laundree-io
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - laundree.io
    secretName: laundree-io-tls
  rules:
  - host: laundree.io
    http:
      paths:
        - backend:
            serviceName: laundree
            servicePort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: master
  name: api-laundree-io
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - api.laundree.io
    secretName: api-laundree-io-tls
  rules:
  - host: api.laundree.io
    http:
      paths:
        - backend:
            serviceName: api
            servicePort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: master
  name: socket-laundree-io
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - socket.laundree.io
    secretName: socket-laundree-io-tls
  rules:
  - host: socket.laundree.io
    http:
      paths:
        - backend:
            serviceName: socket
            servicePort: 3000
